// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ApdKeyPersonForm component renders correctly 1`] = `
<PersonForm
  index={1}
  item={
    Object {
      "costs": Object {
        "1992": 100,
        "1993": 300,
      },
      "email": "email address",
      "fte": Object {
        "1992": 0.32,
        "1993": 0.57,
      },
      "hasCosts": true,
      "key": "person key",
      "name": "Bob the Builder",
      "position": "The Builder",
    }
  }
  savePerson={[MockFunction]}
  years={
    Array [
      "1992",
      "1993",
    ]
  }
>
  <form
    index={1}
    onSubmit={[Function]}
  >
    <h4
      className="ds-h4"
    >
      Additional Key Personnel
    </h4>
    <p
      className="ds-u-margin-bottom--0"
    >
      Provide the name, email, and role for this key personnel. If applicable, provide the individual's total annual cost (including benefits) and their allocation to the overall project work.
    </p>
    <TextField
      label="Name"
      name="apd-state-profile-pocname1"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyUp={[Function]}
      type="text"
      value="Bob the Builder"
    >
      <FormControl
        className="ds-u-clearfix"
        component="div"
        label="Name"
        labelComponent="label"
        render={[Function]}
      >
        <div
          className="ds-u-clearfix"
        >
          <FormLabel
            component="label"
            errorId="field_1-error"
            fieldId="field_1"
            id="field_1-label"
          >
            <label
              className="ds-c-label"
              htmlFor="field_1"
              id="field_1-label"
            >
              <span
                className=""
              >
                Name
              </span>
            </label>
          </FormLabel>
          <TextInput
            errorId="field_1-error"
            errorPlacement="top"
            id="field_1"
            name="apd-state-profile-pocname1"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyUp={[Function]}
            setRef={[Function]}
            type="text"
            value="Bob the Builder"
          >
            <input
              aria-invalid={false}
              className="ds-c-field"
              id="field_1"
              name="apd-state-profile-pocname1"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyUp={[Function]}
              type="text"
              value="Bob the Builder"
            />
          </TextInput>
        </div>
      </FormControl>
    </TextField>
    <TextField
      label="Email"
      name="apd-state-profile-pocemail1"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyUp={[Function]}
      type="text"
      value="email address"
    >
      <FormControl
        className="ds-u-clearfix"
        component="div"
        label="Email"
        labelComponent="label"
        render={[Function]}
      >
        <div
          className="ds-u-clearfix"
        >
          <FormLabel
            component="label"
            errorId="field_2-error"
            fieldId="field_2"
            id="field_2-label"
          >
            <label
              className="ds-c-label"
              htmlFor="field_2"
              id="field_2-label"
            >
              <span
                className=""
              >
                Email
              </span>
            </label>
          </FormLabel>
          <TextInput
            errorId="field_2-error"
            errorPlacement="top"
            id="field_2"
            name="apd-state-profile-pocemail1"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyUp={[Function]}
            setRef={[Function]}
            type="text"
            value="email address"
          >
            <input
              aria-invalid={false}
              className="ds-c-field"
              id="field_2"
              name="apd-state-profile-pocemail1"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyUp={[Function]}
              type="text"
              value="email address"
            />
          </TextInput>
        </div>
      </FormControl>
    </TextField>
    <TextField
      label="Role"
      name="apd-state-profile-pocposition1"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyUp={[Function]}
      type="text"
      value="The Builder"
    >
      <FormControl
        className="ds-u-clearfix"
        component="div"
        label="Role"
        labelComponent="label"
        render={[Function]}
      >
        <div
          className="ds-u-clearfix"
        >
          <FormLabel
            component="label"
            errorId="field_3-error"
            fieldId="field_3"
            id="field_3-label"
          >
            <label
              className="ds-c-label"
              htmlFor="field_3"
              id="field_3-label"
            >
              <span
                className=""
              >
                Role
              </span>
            </label>
          </FormLabel>
          <TextInput
            errorId="field_3-error"
            errorPlacement="top"
            id="field_3"
            name="apd-state-profile-pocposition1"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyUp={[Function]}
            setRef={[Function]}
            type="text"
            value="The Builder"
          >
            <input
              aria-invalid={false}
              className="ds-c-field"
              id="field_3"
              name="apd-state-profile-pocposition1"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyUp={[Function]}
              type="text"
              value="The Builder"
            />
          </TextInput>
        </div>
      </FormControl>
    </TextField>
    <fieldset
      className="ds-c-fieldset"
    >
      <legend
        className="ds-c-label"
      >
        Does this person have costs directly attributable to this program?
      </legend>
      <ChoiceComponent
        checked={false}
        label="No"
        name="apd-state-profile-hascosts1"
        onChange={[Function]}
        type="radio"
        value="no"
      >
        <div>
          <Choice
            checked={false}
            label="No"
            name="apd-state-profile-hascosts1"
            onChange={[Function]}
            type="radio"
            value="no"
          >
            <div
              aria-atomic={null}
              aria-live={null}
              aria-relevant={null}
            >
              <input
                checked={false}
                className="ds-c-choice"
                id="radio_apd-state-profile-hascosts1_4"
                name="apd-state-profile-hascosts1"
                onChange={[Function]}
                type="radio"
                value="no"
              />
              <FormLabel
                component="label"
                fieldId="radio_apd-state-profile-hascosts1_4"
              >
                <label
                  className="ds-c-label"
                  htmlFor="radio_apd-state-profile-hascosts1_4"
                >
                  <span
                    className=""
                  >
                    No
                  </span>
                </label>
              </FormLabel>
            </div>
          </Choice>
        </div>
      </ChoiceComponent>
      <ChoiceComponent
        checked={true}
        checkedChildren={
          <PersonCostForm
            costLabel="Cost with benefits"
            fteLabel="FTE Allocation"
            hint="For example: 0.5 = 0.5 FTE = 50% time"
            items={
              Object {
                "1992": Object {
                  "amt": 100,
                  "perc": 0.32,
                },
                "1993": Object {
                  "amt": 300,
                  "perc": 0.57,
                },
              }
            }
            setCost={[Function]}
            setFTE={[Function]}
          />
        }
        label="Yes"
        name="apd-state-profile-hascosts1"
        onChange={[Function]}
        type="radio"
        value="yes"
      >
        <div>
          <Choice
            checked={true}
            checkedChildren={
              <PersonCostForm
                costLabel="Cost with benefits"
                fteLabel="FTE Allocation"
                hint="For example: 0.5 = 0.5 FTE = 50% time"
                items={
                  Object {
                    "1992": Object {
                      "amt": 100,
                      "perc": 0.32,
                    },
                    "1993": Object {
                      "amt": 300,
                      "perc": 0.57,
                    },
                  }
                }
                setCost={[Function]}
                setFTE={[Function]}
              />
            }
            label="Yes"
            name="apd-state-profile-hascosts1"
            onChange={[Function]}
            type="radio"
            value="yes"
          >
            <div
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
            >
              <input
                checked={true}
                className="ds-c-choice"
                id="radio_apd-state-profile-hascosts1_5"
                name="apd-state-profile-hascosts1"
                onChange={[Function]}
                type="radio"
                value="yes"
              />
              <FormLabel
                component="label"
                fieldId="radio_apd-state-profile-hascosts1_5"
              >
                <label
                  className="ds-c-label"
                  htmlFor="radio_apd-state-profile-hascosts1_5"
                >
                  <span
                    className=""
                  >
                    Yes
                  </span>
                </label>
              </FormLabel>
              <PersonCostForm
                costLabel="Cost with benefits"
                fteLabel="FTE Allocation"
                hint="For example: 0.5 = 0.5 FTE = 50% time"
                items={
                  Object {
                    "1992": Object {
                      "amt": 100,
                      "perc": 0.32,
                    },
                    "1993": Object {
                      "amt": 300,
                      "perc": 0.57,
                    },
                  }
                }
                setCost={[Function]}
                setFTE={[Function]}
              >
                <div>
                  <h5
                    className="ds-h5"
                  >
                    FFY 
                    1992
                     Cost
                  </h5>
                  <div
                    className="ds-c-choice__checkedChild ds-u-padding-y--0"
                  >
                    <DollarField
                      label="Cost with benefits"
                      name="cost"
                      onChange={[Function]}
                      size="medium"
                      value={100}
                    >
                      <NumberField
                        label="Cost with benefits"
                        mask="currency"
                        min={null}
                        name="cost"
                        onBlur={null}
                        onChange={[Function]}
                        round={true}
                        size="medium"
                        value={100}
                      >
                        <TextField
                          label="Cost with benefits"
                          mask="currency"
                          name="cost"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          size="medium"
                          type="text"
                          value="100"
                        >
                          <FormControl
                            className="ds-u-clearfix"
                            component="div"
                            label="Cost with benefits"
                            labelComponent="label"
                            render={[Function]}
                          >
                            <div
                              className="ds-u-clearfix"
                            >
                              <FormLabel
                                component="label"
                                errorId="field_6-error"
                                fieldId="field_6"
                                id="field_6-label"
                              >
                                <label
                                  className="ds-c-label"
                                  htmlFor="field_6"
                                  id="field_6-label"
                                >
                                  <span
                                    className=""
                                  >
                                    Cost with benefits
                                  </span>
                                </label>
                              </FormLabel>
                              <TextInput
                                errorId="field_6-error"
                                errorPlacement="top"
                                id="field_6"
                                mask="currency"
                                name="cost"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                setRef={[Function]}
                                size="medium"
                                type="text"
                                value="100"
                              >
                                <Mask
                                  mask="currency"
                                >
                                  <div
                                    className="ds-c-field-mask ds-c-field-mask--currency"
                                  >
                                    <div
                                      className="ds-c-field__before ds-c-field__before--currency"
                                    >
                                      $
                                    </div>
                                    <input
                                      aria-invalid={false}
                                      className="ds-c-field ds-c-field--currency ds-c-field--medium"
                                      id="field_6"
                                      inputMode="numeric"
                                      name="cost"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onFocus={[Function]}
                                      pattern="[0-9.,-]*"
                                      type="text"
                                      value="100"
                                    />
                                  </div>
                                </Mask>
                              </TextInput>
                            </div>
                          </FormControl>
                        </TextField>
                      </NumberField>
                    </DollarField>
                    <NumberField
                      hint="For example: 0.5 = 0.5 FTE = 50% time"
                      label="FTE Allocation"
                      mask={null}
                      min={0}
                      name="ftes"
                      onBlur={null}
                      onChange={[Function]}
                      round={false}
                      size="medium"
                      value={0.32}
                    >
                      <TextField
                        hint="For example: 0.5 = 0.5 FTE = 50% time"
                        label="FTE Allocation"
                        mask={null}
                        name="ftes"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        size="medium"
                        type="text"
                        value="0.32"
                      >
                        <FormControl
                          className="ds-u-clearfix"
                          component="div"
                          hint="For example: 0.5 = 0.5 FTE = 50% time"
                          label="FTE Allocation"
                          labelComponent="label"
                          render={[Function]}
                        >
                          <div
                            className="ds-u-clearfix"
                          >
                            <FormLabel
                              component="label"
                              errorId="field_7-error"
                              fieldId="field_7"
                              hint="For example: 0.5 = 0.5 FTE = 50% time"
                              id="field_7-label"
                            >
                              <label
                                className="ds-c-label"
                                htmlFor="field_7"
                                id="field_7-label"
                              >
                                <span
                                  className=""
                                >
                                  FTE Allocation
                                </span>
                                <span
                                  className="ds-c-field__hint"
                                >
                                  For example: 0.5 = 0.5 FTE = 50% time
                                </span>
                              </label>
                            </FormLabel>
                            <TextInput
                              errorId="field_7-error"
                              errorPlacement="top"
                              id="field_7"
                              mask={null}
                              name="ftes"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              setRef={[Function]}
                              size="medium"
                              type="text"
                              value="0.32"
                            >
                              <input
                                aria-invalid={false}
                                className="ds-c-field ds-c-field--medium"
                                id="field_7"
                                name="ftes"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                type="text"
                                value="0.32"
                              />
                            </TextInput>
                          </div>
                        </FormControl>
                      </TextField>
                    </NumberField>
                    <p>
                      <strong>
                        Total: 
                      </strong>
                      <Dollars>
                        <span>
                          $32
                        </span>
                      </Dollars>
                    </p>
                  </div>
                  <h5
                    className="ds-h5"
                  >
                    FFY 
                    1993
                     Cost
                  </h5>
                  <div
                    className="ds-c-choice__checkedChild ds-u-padding-y--0"
                  >
                    <DollarField
                      label="Cost with benefits"
                      name="cost"
                      onChange={[Function]}
                      size="medium"
                      value={300}
                    >
                      <NumberField
                        label="Cost with benefits"
                        mask="currency"
                        min={null}
                        name="cost"
                        onBlur={null}
                        onChange={[Function]}
                        round={true}
                        size="medium"
                        value={300}
                      >
                        <TextField
                          label="Cost with benefits"
                          mask="currency"
                          name="cost"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          size="medium"
                          type="text"
                          value="300"
                        >
                          <FormControl
                            className="ds-u-clearfix"
                            component="div"
                            label="Cost with benefits"
                            labelComponent="label"
                            render={[Function]}
                          >
                            <div
                              className="ds-u-clearfix"
                            >
                              <FormLabel
                                component="label"
                                errorId="field_8-error"
                                fieldId="field_8"
                                id="field_8-label"
                              >
                                <label
                                  className="ds-c-label"
                                  htmlFor="field_8"
                                  id="field_8-label"
                                >
                                  <span
                                    className=""
                                  >
                                    Cost with benefits
                                  </span>
                                </label>
                              </FormLabel>
                              <TextInput
                                errorId="field_8-error"
                                errorPlacement="top"
                                id="field_8"
                                mask="currency"
                                name="cost"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                setRef={[Function]}
                                size="medium"
                                type="text"
                                value="300"
                              >
                                <Mask
                                  mask="currency"
                                >
                                  <div
                                    className="ds-c-field-mask ds-c-field-mask--currency"
                                  >
                                    <div
                                      className="ds-c-field__before ds-c-field__before--currency"
                                    >
                                      $
                                    </div>
                                    <input
                                      aria-invalid={false}
                                      className="ds-c-field ds-c-field--currency ds-c-field--medium"
                                      id="field_8"
                                      inputMode="numeric"
                                      name="cost"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onFocus={[Function]}
                                      pattern="[0-9.,-]*"
                                      type="text"
                                      value="300"
                                    />
                                  </div>
                                </Mask>
                              </TextInput>
                            </div>
                          </FormControl>
                        </TextField>
                      </NumberField>
                    </DollarField>
                    <NumberField
                      hint="For example: 0.5 = 0.5 FTE = 50% time"
                      label="FTE Allocation"
                      mask={null}
                      min={0}
                      name="ftes"
                      onBlur={null}
                      onChange={[Function]}
                      round={false}
                      size="medium"
                      value={0.57}
                    >
                      <TextField
                        hint="For example: 0.5 = 0.5 FTE = 50% time"
                        label="FTE Allocation"
                        mask={null}
                        name="ftes"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        size="medium"
                        type="text"
                        value="0.57"
                      >
                        <FormControl
                          className="ds-u-clearfix"
                          component="div"
                          hint="For example: 0.5 = 0.5 FTE = 50% time"
                          label="FTE Allocation"
                          labelComponent="label"
                          render={[Function]}
                        >
                          <div
                            className="ds-u-clearfix"
                          >
                            <FormLabel
                              component="label"
                              errorId="field_9-error"
                              fieldId="field_9"
                              hint="For example: 0.5 = 0.5 FTE = 50% time"
                              id="field_9-label"
                            >
                              <label
                                className="ds-c-label"
                                htmlFor="field_9"
                                id="field_9-label"
                              >
                                <span
                                  className=""
                                >
                                  FTE Allocation
                                </span>
                                <span
                                  className="ds-c-field__hint"
                                >
                                  For example: 0.5 = 0.5 FTE = 50% time
                                </span>
                              </label>
                            </FormLabel>
                            <TextInput
                              errorId="field_9-error"
                              errorPlacement="top"
                              id="field_9"
                              mask={null}
                              name="ftes"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              setRef={[Function]}
                              size="medium"
                              type="text"
                              value="0.57"
                            >
                              <input
                                aria-invalid={false}
                                className="ds-c-field ds-c-field--medium"
                                id="field_9"
                                name="ftes"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                type="text"
                                value="0.57"
                              />
                            </TextInput>
                          </div>
                        </FormControl>
                      </TextField>
                    </NumberField>
                    <p>
                      <strong>
                        Total: 
                      </strong>
                      <Dollars>
                        <span>
                          $171
                        </span>
                      </Dollars>
                    </p>
                  </div>
                </div>
              </PersonCostForm>
            </div>
          </Choice>
        </div>
      </ChoiceComponent>
    </fieldset>
    <input
      className="ds-u-visibility--hidden"
      hidden={true}
      type="submit"
    />
  </form>
</PersonForm>
`;

exports[`the ApdKeyPersonForm component renders correctly if the person does not have costs 1`] = `
<form
  index={1}
  onSubmit={[Function]}
>
  <h4
    className="ds-h4"
  >
    Additional Key Personnel
  </h4>
  <p
    className="ds-u-margin-bottom--0"
  >
    Provide the name, email, and role for this key personnel. If applicable, provide the individual's total annual cost (including benefits) and their allocation to the overall project work.
  </p>
  <TextField
    label="Name"
    name="apd-state-profile-pocname1"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="Bob the Builder"
  />
  <TextField
    label="Email"
    name="apd-state-profile-pocemail1"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="email address"
  />
  <TextField
    label="Role"
    name="apd-state-profile-pocposition1"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="The Builder"
  />
  <fieldset
    className="ds-c-fieldset"
  >
    <legend
      className="ds-c-label"
    >
      Does this person have costs directly attributable to this program?
    </legend>
    <ChoiceComponent
      checked={true}
      label="No"
      name="apd-state-profile-hascosts1"
      onChange={[Function]}
      type="radio"
      value="no"
    />
    <ChoiceComponent
      checked={false}
      checkedChildren={
        <PersonCostForm
          costLabel="Cost with benefits"
          fteLabel="FTE Allocation"
          hint="For example: 0.5 = 0.5 FTE = 50% time"
          items={
            Object {
              "1992": Object {
                "amt": 100,
                "perc": 0.32,
              },
              "1993": Object {
                "amt": 300,
                "perc": 0.57,
              },
            }
          }
          setCost={[Function]}
          setFTE={[Function]}
        />
      }
      label="Yes"
      name="apd-state-profile-hascosts1"
      onChange={[Function]}
      type="radio"
      value="yes"
    />
  </fieldset>
  <input
    className="ds-u-visibility--hidden"
    hidden={true}
    type="submit"
  />
</form>
`;

exports[`the ApdKeyPersonForm component renders correctly if the person is a primary contact 1`] = `
<form
  index={0}
  onSubmit={[Function]}
>
  <h4
    className="ds-h4"
  >
    Primary APD Point of Contact
  </h4>
  <p
    className="ds-u-margin-bottom--0"
  >
    Personnel listed in this section must be assigned to APD by name, role, time commitment, and cost, where applicable.
  </p>
  <TextField
    label="Name"
    name="apd-state-profile-pocname0"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="Bob the Builder"
  />
  <TextField
    label="Email"
    name="apd-state-profile-pocemail0"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="email address"
  />
  <TextField
    label="Role"
    name="apd-state-profile-pocposition0"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="The Builder"
  />
  <fieldset
    className="ds-c-fieldset"
  >
    <legend
      className="ds-c-label"
    >
      Does this person have costs directly attributable to this program?
    </legend>
    <ChoiceComponent
      checked={false}
      label="No"
      name="apd-state-profile-hascosts0"
      onChange={[Function]}
      type="radio"
      value="no"
    />
    <ChoiceComponent
      checked={true}
      checkedChildren={
        <PersonCostForm
          costLabel="Cost with benefits"
          fteLabel="FTE Allocation"
          hint="For example: 0.5 = 0.5 FTE = 50% time"
          items={
            Object {
              "1992": Object {
                "amt": 100,
                "perc": 0.32,
              },
              "1993": Object {
                "amt": 300,
                "perc": 0.57,
              },
            }
          }
          setCost={[Function]}
          setFTE={[Function]}
        />
      }
      label="Yes"
      name="apd-state-profile-hascosts0"
      onChange={[Function]}
      type="radio"
      value="yes"
    />
  </fieldset>
  <input
    className="ds-u-visibility--hidden"
    hidden={true}
    type="submit"
  />
</form>
`;
